--- a/CHANGES
+++ b/CHANGES
@@ -8,11 +8,26 @@ most recent build should be at the top of this file.
 
 Thanks!
 
+3.6.0 Beta 2
+------------
+- Replace deprecated methods
+- Remove support of Bitly URL shortening in plugins
+
 3.6.0 Beta 1
 ------------
 ### ! For OS X 10.11 (El Capitan) or later only !
 - Lift deployment target to macOS 10.11 & start modernizing code
 - Replaced MASPreferences with Storyboard implementation (Preferences window)
+
+3.5.7
+-----
+- Fix file being hidden at end of "Download image"
+- Fix crash on editing search folder
+- Fix inaccurate information about number of unread articles
+- Fix wrong behaviour of "Move articles to Trash: After a Month" preference
+- Remove Google+ plugin ; replace it with Google Currents plugin
+- Increase to 1000 the limit of articles fetched at once from an Open Reader feed
+- Update Sparkle to v1.23.0 and MMTabBarView to v/1.4.7
 
 3.5.6
 -----
