--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,10 @@ most recent build should be at the top of this file.
 
 Thanks!
 
+3.6.0 Beta 4
+------------
+- Udate to Xcode 12
+
 3.6.0 Beta 3
 ------------
 - Configure Github configuration to close abandoned issues
@@ -15,13 +19,24 @@ Thanks!
 3.6.0 Beta 2
 ------------
 - Replace deprecated methods
-- Remove support of Bitly URL shortening in plugins
 
 3.6.0 Beta 1
 ------------
 ### ! For OS X 10.11 (El Capitan) or later only !
 - Lift deployment target to macOS 10.11 & start modernizing code
 - Replaced MASPreferences with Storyboard implementation (Preferences window)
+
+3.5.9
+-----
+- Add toolbar icon for deleting articles
+- Parse more tags from 'media' namespace to get YouTube descriptions
+- Remove support of Bitly URL shortening in plugins
+- Speed up the cleaning of URL strings
+- Speed up parsing of date strings
+- Prevent crash when parsing non XML data
+- Fix empty ArticleView on returning to same article
+- Update to MMTabBarView v/1.4.9
+- Fix running individual Xcode tests
 
 3.5.8
 -----
